<resources>
    <string name="app_name">水情监测</string>

    <array name="chart_yaxis_text">
        <item>闸门开度</item>
        <item>闸前水位</item>
        <item>闸后水位</item>
    </array>
    <array name="fsk_chart_yaxis_text">
        <item>分水口开度</item>
        <item>瞬时流量</item>
        <item>总流量</item>
    </array>

    <array name="time_choice_string">
        <item>最近三天</item>
        <item>最近五天</item>
        <item>最近十二天</item>
        <item>最近三十天</item>
    </array>

    <array name="statistics_title">
        <item>全线调度辅助分析</item>
        <item>流速统计</item>
        <item>水深统计</item>
        <item>分水统计</item>
        <item>重点断面统计</item>
    </array>
    <array name="overview_title">
        <item>节制闸</item>
        <item>分水口</item>
    </array>

    <string name="station_Id_name" formatted="true">%1$s (%2$d)</string>
    <string name="station_latitude">纬度：%s</string>
    <string name="station_longitude">经度：%s</string>

    <string name="search_station_string">搜索 监测站名或ID</string>

    <string name="edit_default_time_area">修改默认时间区间</string>
    <string name="edit_station_position">修改监测站坐标</string>
    <string name="start_time_string">起始时间: %s</string>
    <string name="end_time_string">结束时间: %s</string>
    <string name="chioce_start_time_stirng">请选择起始时间</string>
    <string name="chioce_end_time_string">请选择结束时间</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_username">用户名格式错误</string>
    <string name="error_invalid_password">密码格式错误</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_field_required">该值不能为空</string>
    <string name="admin_name">管理员:%s</string>
    <string name="view_page_time">时间点: %s</string>
    <!--<string name="error_field_required">This field is required</string>-->

</resources>
