<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#11cccccc"
              android:orientation="vertical"
              tools:context="com.app.feng.waterlevelwatcher.ui.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/white_"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="管理员:1234552"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?selectableItemBackground"
            android:text="退出登录"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_shadow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_default_time_area"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_layout_setting"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time_string"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/end_time_string"/>

        <Button
            android:id="@+id/mask"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_gravity="right|bottom"
            android:background="?selectableItemBackground"
            android:text="修改"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>


</LinearLayout>
